# fd-docs

./: .gitignore  LICENSE  README.md  TODO.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements-images.txt  requirements.txt
.github/workflows/: deploy.yml
.specstory/history/: 2025-09-06_00-47Z-replicate-site-design-for-tutorials.md  2025-09-06_02-29Z-rename-github-repository-from-fd-docs.md
docs/: about.md  blog.md  community.md  index.md  subscribe.md
docs/assets/images/: README.md
docs/getting-started/: installation.md
docs/labs/: index.md
docs/labs/blog/: index.md
docs/labs/commons/: index.md
docs/labs/commons/caresdb/: README.md  caresdb_data_model.sql  index.md
docs/labs/commons/devicesdb/: ERD_README.md  README.md  medisnowdb_data_model.sql  medisnowdb_quick_reference.md
docs/labs/commons/financedb/: README.md  drop_financedb_data_model.sql  financdb_data_model.sql
docs/labs/commons/geospatialdb/: README.md  drop_geospatialdb_data_model.sql  geospatialdb_data_model.sql
docs/labs/commons/hrdb/: README.md  drop_hrdb_data_model.sql  hrdb_data_model.sql
docs/labs/commons/iotdb/: README.md  drop_iotdb_data_model.sql  index.md  iotdb_data_model.sql
docs/labs/commons/jsondb/: README.md  drop_jsondb_data_model.sql  jsondb_data_model.sql
docs/labs/commons/legaldb/: README.md  drop_legaldb_data_model.sql  legaldb_data_model.sql
docs/labs/commons/marketingdb/: README.md  drop_marketingdb_data_model.sql  marketingdb_data_model.sql
docs/labs/commons/ordersdb/: README.md  drop_ordersdb_data_model.sql  ordersdb_data_model.sql
docs/labs/commons/retaildb/: README.md  drop_retaildb_data_model.sql  retaildb_data_model.sql  retaildb_quick_reference.md
docs/labs/commons/salesdb/: README.md  drop_salesdb_data_model.sql  (+3 more)
docs/labs/dev-tools/: bolt-new.md  cursor-ide.md  excalidraw.md  github-copilot.md  index.md
docs/labs/snowflake/: index.md  resources.md
docs/tutorials/advanced-warehousing/: data-quality-metrics.md
docs/tutorials/ai-ml/: snowpark-ml.md
docs/tutorials/collaboration-sharing/: index.md
docs/tutorials/common-models/: caresdb-data-model.md  iotdb-data-model.md  medisnowdb-data-model.md  ordersdb-data-model.md  salesdb-data-model.md
docs/tutorials/data-science/: python-basics.md
docs/tutorials/dev-tools/: cursor-ide.md  slidev.md  terminal-cli.md  vscode.md
docs/tutorials/gen-ai-llms/: cortex-ai.md
docs/tutorials/snowflake/: higher-order-functions.md  index.md
overrides/: main.html
overrides/css/: extra.css
overrides/partials/: header.html
scripts/: extract_images.py
src/: analytics_injector.py
(+59 files in other folders)
